<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpPage">

    <Button
        android:id="@+id/_btnRegister"
        android:layout_width="130dp"
        android:layout_height="43dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="106dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_etPassword2"
        app:layout_constraintVertical_bias="0.266" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="297dp"
        android:layout_height="51dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="57dp"
        android:text="@string/create_a_new_account"
        android:textAlignment="center"
        android:textSize="29sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/_etPassword2"
        android:layout_width="273dp"
        android:layout_height="49dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="69dp"
        android:hint="@string/repeat_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_etPassword1" />

    <EditText
        android:id="@+id/_etLName"
        android:layout_width="273dp"
        android:layout_height="49dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="69dp"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_etFName" />

    <EditText
        android:id="@+id/_etPassword1"
        android:layout_width="273dp"
        android:layout_height="49dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="69dp"
        android:hint="@string/prompt_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_etEmail" />

    <EditText
        android:id="@+id/_etFName"
        android:layout_width="273dp"
        android:layout_height="49dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="69dp"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/_etEmail"
        android:layout_width="273dp"
        android:layout_height="51dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="69dp"
        android:hint="@string/prompt_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_etLName" />

    <TextView
        android:id="@+id/_tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="122dp"
        android:gravity="center|center_horizontal"
        android:text="@string/register_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_btnRegister" />


</androidx.constraintlayout.widget.ConstraintLayout>